--- a/src/client/index.html
+++ b/src/client/index.html
@@ -13,6 +13,22 @@
     <div id="root">
         <!-- app -->
     </div>
+    <div>
+        <button id="single1">1.key相同，类型相同，数量相同</button>
+        <button id="single1Update">复用老节点，只更新属性</button>
+    </div>
+    <div>
+        <button id="single2">2.key相同，类型不同</button>
+        <button id="single2Update">删除老节点，添加新节点</button>
+    </div>  
+    <div>
+        <button id="single3">3.key不同，类型相同</button>
+        <button id="single3Update">删除老节点，添加新节点</button>
+    </div>
+    <div>
+        <button id="single4">4.原来多个节点，现在只有一个节点</button>
+        <button id="single4Update">保留并更新这一个节点，删除其他节点</button>
+    </div>
 </body>
 
 </html>
