--- a/src/client/index.html
+++ b/src/client/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script> -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lodash.js/4.17.21/lodash.min.js"></script>
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     <div>
         <button id="single2">2.key相同，类型不同</button>
         <button id="single2Update">删除老节点，添加新节点</button>
-    </div>  
+    </div>
     <div>
         <button id="single3">3.key不同，类型相同</button>
         <button id="single3Update">删除老节点，添加新节点</button>
